Fix supply header alignment

--- a/src/main/webapp/assets/css/less/supply.less
+++ b/src/main/webapp/assets/css/less/supply.less
@@ -20,7 +20,7 @@
 }
 
 .supply-text {
-  color: darken(@blue-purple, 20%);
+  color: darken(@blue-purple, 20%) !important;
   .bold;
 }
 
